--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Assessment 2</title>
 </head>
 <body>
-    <form action="./assessment2 page.html">
+    <!-- <form action="./assessment2 page.html">
     <h1>FORMS</h1>
     <label for="Name">Name</label>
     <input required type="text" placeholder="Name" id="Name" name="Name"><br> <br>
@@ -36,7 +36,8 @@
     <input required type="number" name="number">
     <input type="submit">
     <h1>TABLES</h1>
-    <a href="./TABLES Asmt2.html">Click Here</a>
+    <a href="./TABLES Asmt2.html">Click Here</a> -->
+    <p>"status":"operational"</p>
 </form>
 </body>
 </html>
