--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <input type="submit">
     <h1>TABLES</h1>
     <a href="./TABLES Asmt2.html">Click Here</a> -->
-    <p>{"status":"operational"}</p>
+    <p>{"status":"degraded"}</p>
 </form>
 </body>
 </html>
